k8ssample/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo-app
          image: nginx:1.25
          ports:
            - containerPort: 80
      #     volumeMounts:
      #       # Mount the HTML content (as before, mounting to the directory)
      #       - name: html-volume
      #         mountPath: /usr/share/nginx/html
      #       # 👇 New mount for the Nginx configuration
      #       - name: config-volume
      #         mountPath: /etc/nginx/conf.d/default.conf
      #         subPath: default.conf # Mounts only the file, not the whole ConfigMap
      # volumes:
      #   - name: html-volume
      #     configMap:
      #       name: demo-html
      #   # 👇 New volume for the Nginx configuration
      #   - name: config-volume
      #     configMap:
      #       name: demo-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test.egrand.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 80
